# Genomique-Comparee

./: .gitignore  LICENSE  README.md  basic.py  bbh.py  blast_iter.py  config.toml  pyproject.toml  requirements.txt
Data/Statistics/: core_genomes_diversity.csv
R_gencomp/: figures.R
Sh/: blast_db_creation.sh  launch_blast.sh
gencomp/: bbh.py  core_genome.py  parsing.py  threshold.py
gencomp/_assets/: config.toml  thresholds.csv  weighted_thresholds.csv
tests/: test_gencomp.py  test_parsing.py
